# pinit

./: .gitattributes  .gitignore  .justfile  .yamlfmt  .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/setup-cargo-tools/: action.yml
.github/config/: repo.json  topics.json
.github/config/branch-protection/: main.json
.github/workflows/: ci.yml  dependabot-issues.yml  release-plz.yml  release.yml  semver.yml
crates/pinit/: Cargo.toml
crates/pinit-cli/: Cargo.toml
crates/pinit-cli/src/: cli.rs  lib.rs  main.rs
crates/pinit-cli/tests/: cli.rs  smoke.rs
crates/pinit-core/: Cargo.toml
crates/pinit-core/src/: config.rs  lib.rs  licensing.rs  merge.rs  resolve.rs
crates/pinit-core/tests/: api_coverage.rs  apply_errors.rs  apply_existing.rs  apply_generated.rs  apply_ignore.rs  apply_merge_treesitter.rs  apply_misc.rs  config_env.rs  config_shapes.rs  merge_strategies.rs  resolve.rs
crates/pinit/src/: cli.rs  lib.rs  main.rs
crates/pinit/tests/: cli.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: COMPARISON.md  CONFIG.md  configuration.md  man.yaml
