[package]
name = "pinit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pinit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
pinit-core = { path = "../pinit-core" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
