[package]
name = "pinit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
directories = "6.0.0"
indexmap = "2.12.1"
rust-yaml = "0.0.5"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = { version = "0.1.41", features = ["attributes"] }
toml_edit = "0.22.27"
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
