[package]
name = "pinit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
directories = "6.0.0"
indexmap = "2.12.1"
rust-yaml = "0.0.5"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = { version = "0.1.41", features = ["attributes"] }
toml_edit = "0.22.27"
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-lua = "0.2.0"
tree-sitter-md = "0.5.1"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-zsh = "0.52.0"
